# nano_vietnam_bot

./: .env.example  README.md  nanovietnam_spec_v0.3.md  pyproject.toml  requirements.txt  word_fsm.md
.github/workflows/: ci.yml
nano_vietnam/: __init__.py  bot.py  database.py  domain.py  market_data.py
nano_vietnam/programs/: daily_session.py  market.py
tests/: conftest.py  test_daily_session.py  test_domain.py  test_review_scheduler.py  test_smoke_import.py
